$Amigan: fakedbfs/CHANGELOG,v 1.3 2005/11/08 04:52:18 dcp1990 Exp $

Changelog

1.1.0-RELEASE ("Bodhisattva")
*All indexing functions now accept a last argument, def, for default fields. This is to facilitate our default spec parser for findex(1).
*Makefiles should work with gmake

1.0.0-RELEASE ("Steely Dan")
*Initial Release