@@ -1,4 +1,4 @@
-# $Amigan: fakedbfs/libfakedbfs/Makefile,v 1.23 2005/11/08 04:35:57 dcp1990 Exp $
+# $Amigan: fakedbfs/libfakedbfs/Makefile,v 1.24 2005/11/24 02:41:56 dcp1990 Exp $
 include ../config.mk
 include ../globals.mk
 CC=cc
@@ -6,9 +6,9 @@ CPPFLAGS+=-DYY_NO_UNPUT
 LIBS=-lsqlite3 -lfl -lm $(LIBEXT)
 CFLAGS+=-ansi
 SRCS=libfakedbfs.c sqlite.c dbspec.c dbinit.c lex.yy.c memory.c error.c indexing.c debug.c plugins.c query.c queryparser.c qtokenise.c fregex.c crawler.c \
-	defspecs.c
+	defspecs.c dspparser.c
 OBJS=libfakedbfs.o sqlite.o dbspec.o dbinit.o lex.yy.o memory.o error.o indexing.o debug.o plugins.o query.o queryparser.o qtokenise.o fregex.o crawler.o \
-	defspecs.o
+	defspecs.o dspparser.o
 #OBJS!=echo ${SRCS} | sed -e 's/\.c/.o/g'
 CFLAGS+=$(CPPFLAGS) # why?
 all: .depend libfakedbfs.so libfakedbfs.a
@@ -20,6 +20,8 @@ queryparser.c: queryparser.y
 	../buildtools/lemon -s queryparser.y
 dbspec.c: dbspec.y
 	../buildtools/lemon -s dbspec.y
+dspparser.c: dspparser.y
+	../buildtools/lemon -s dspparser.y
 libfakedbfs.so: $(OBJS)
 	$(CC) $(LDFLAGS) -shared -o libfakedbfs.so ${OBJS} $(LIBS)
 libfakedbfs.a: $(OBJS)
@@ -32,4 +34,5 @@ lint:
 install: all
 	install libfakedbfs.so /usr/local/lib
 clean:
-	rm -f *.core *.o *~ .depend dbspec.c dbspec.h dbspec.out libfakedbfs.so lex.yy.c libfakedbfs.a queryparser.c queryparser.h queryparser.out
+	rm -f *.core *.o *~ .depend dbspec.c dbspec.h dbspec.out libfakedbfs.so lex.yy.c libfakedbfs.a queryparser.c queryparser.h queryparser.out \
+		dspparser.c dspparser.h dspparser.out
